# zone_model_1

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zone_model_1/: Input.xlsx  __init__.py  char_regression.py  charring.py  core.py  heat_transfer_1d_plus_qinc.py  hrr.py  main.py  main_test.py  zone_model_beta_1.py  zone_model_out.csv
tests/: charring.py
zone_model_1/: __main__.py  charring.py  heat_transfer_1d_plus_qinc.py  hrr.py  localised_fire.py  main_window.py  project_info.py  zone_model_beta_1.py
zone_model_1/common/: config.py  description_label.py  dialog_plain_text.py  interface_gallery.py  mask_dialog_base.py  signal_bus.py  spinbox.py  style_sheet.py  tool_tip_2.py  tree_view.py
zone_model_1/common/chart/: chart.py  common.py  setting.py  test.py  test_devc_csv.py  test_fds_fds.py
zone_model_1/funcs/: pd_7974_1_2019.py
zone_model_1/interfaces/: __init__.py  setting.py
zone_model_1/interfaces/heat_release_rate/: __init__.py  main_interface.py
zone_model_1/interfaces/heat_transfer/: __init__.py  main_interface.py
zone_model_1/resource/: resource.qrc
zone_model_1/resource/qss/dark/: description_label.qss  gallery_interface.qss  tree_view.qss
zone_model_1/resource/qss/light/: description_label.qss  gallery_interface.qss  text_edit.qss  tree_view.qss
