[project]
name = "zone_model_1"
version = "0.0.1"
authors = [
    { name = "Yan Fu", email = "ian.fu@ofrconsultants.com" },
    { name = "Danny Hopkin", email = "danny.hopkin@ofrconsultants.com" },
]
description = "A zone model with timber lining"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fsepy/zone_model_1"
Issues = "https://github.com/fsepy/zone_model_1/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
